Create develop, add readme and license for open sourcing

--- a/ZDC.Core/appsettings.json
+++ b/ZDC.Core/appsettings.json
@@ -1,3 +1,11 @@
 {
-  "ConnectionString": "Server=localhost;Database=vzdc_core_dev;Uid=root;Pwd=root;"
+  "ConnectionString": "Server=localhost;Database=vzdc_core_dev;Uid=root;Pwd=root;",
+  "DataUrl": "http://cluster.data.vatsim.net/v3/vatsim-data.json",
+  "RosterUrl": "https://api.vatusa.net/v2/facility/zdc/roster/",
+  "ConnectClientId": 706,
+  "ConnectClientSecret": "lUb9HzC5jEmTN3FXaayNwznQHpg5QrAXjMFuGccY",
+  "ConnectRedirectUrl": "https://localhost:5001/auth/token",
+  "VatusaApiKey": "l5l3xwFnZ0DxFuNg",
+  "DatafileInterval": 15,
+  "RosterInterval": 5
 }
