--- a/ZDC.Core/appsettings.example.json
+++ b/ZDC.Core/appsettings.example.json
@@ -1,3 +1,11 @@
 ﻿{
-  "ConnectionString": ""
+  "ConnectionString": "",
+  "DataUrl": "",
+  "RosterUrl": "",
+  "ConnectClientId": 0,
+  "ConnectClientSecret": "",
+  "ConnectRedirectUrl": "",
+  "VatusaApiKey": "",
+  "DatafileInterval": 15,
+  "RosterInterval": 5
 }
