--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,4 @@ jobs:
         host: ${{ secrets.SSH_HOST_STAGING }}
         username: ${{ secrets.SSH_USER_STAGING }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        script: cd /home/ZDC.Core && sudo chmod +x deploy.sh && ./deploy.sh
+        script: cd /home/ZDC.Core && git stash && git pull && sudo chmod +x deploy.sh && ./deploy.sh
