--- a/ZDC.Core/ZDC.Core.csproj
+++ b/ZDC.Core/ZDC.Core.csproj
@@ -6,28 +6,29 @@
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.6" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.6" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.6">
+	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
+	<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.7">
 	  <PrivateAssets>all</PrivateAssets>
 	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.6">
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.7">
 		<PrivateAssets>all</PrivateAssets>
 		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	</PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Kubernetes.Tools.Targets" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.6" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.7" />
     <PackageReference Include="prometheus-net" Version="4.1.1" />
     <PackageReference Include="prometheus-net.AspNetCore" Version="4.1.1" />
     <PackageReference Include="Quartz" Version="3.3.2" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
-    <PackageReference Include="VATSIM.Connect.AspNetCore.Server" Version="0.0.1-alpha.7" />
-    <PackageReference Include="VATSIM.Connect.AspNetCore.Shared" Version="0.0.1-alpha.7" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.1" />
+    <PackageReference Include="ZDC.Models" Version="1.7.0" />
   </ItemGroup>
 
   <ItemGroup>
