--- a/ZDC.Core/ZDC.Core.csproj
+++ b/ZDC.Core/ZDC.Core.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="AutoMapper" Version="10.1.1" />
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
@@ -28,7 +30,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.1" />
-    <PackageReference Include="ZDC.Models" Version="1.10.1" />
+    <PackageReference Include="ZDC.Models" Version="1.10.11" />
   </ItemGroup>
 
 </Project>
