--- a/ZDC.Core/ZDC.Core.csproj
+++ b/ZDC.Core/ZDC.Core.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
 	<PackageReference Include="AutoMapper" Version="10.1.1" />
 	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+	<PackageReference Include="AWSSDK.SimpleEmail" Version="3.7.0.36" />
+	<PackageReference Include="Azure.Storage.Blobs" Version="12.9.1" />
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.7" />
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.7" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
@@ -30,7 +32,7 @@
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.11.1" />
-    <PackageReference Include="ZDC.Models" Version="1.10.15" />
+    <PackageReference Include="ZDC.Models" Version="1.11.1" />
   </ItemGroup>
 
 </Project>
